--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/react": "^1.6.10",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "dayjs": "^1.10.7",
     "framer-motion": "^4.1.17",
     "next": "12.0.2",
     "react": "17.0.2",
