--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "framer-motion": "^4.1.17",
     "next": "12.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.19.3"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
